--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "tuto nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "mocha "
+    "test": "mocha 'test/**/*.js' --timeout 60000",
+    "test-debug": "mocha --debug 'test/**/*.js' --timeout 60000"
   },
   "author": "cchopin",
   "license": "ISC",
